 iTeleskop ChangeLog
---------------------

0.2.6 (2016-01-30)
- Added Reset button to add task form
- skip_before and skip_after now have default values (now, now + 14
days)
- added Refresh button in the tasks view

0.2.5 (2016-01-25)
- Renamed min_sun_alt to max_sun_alt
- Default max_sun_alt is now -18, not -12

0.2.4 (2016-01-24)
- Renamed task state 0(waiting) to 0(template)
- Added ability to switch tasks between 0(template) and 1(waiting)
- Added ability to delete tasks you own that are in 0 or 1 state
- Translation to English in progress
- Added filtering to tasks:
  - filter by specific state 0-6/show all states
  - show only my tasks (yes/no)
- Removed columns:
  - skip_period_seconds
  - skip_period_count
- Renamed columns:
  - skip_interval to min_interval
- Added columns in task:
  - max_moon_phase
  - min_sun_alt
- Translation to English almost complete

0.2.3 (2016-01-20)
- Corrected negative declination calculations
- Corrected right ascension calculations. Right now the floating point
  value can change between 0 and 359.99999999
- Added binning 4x4
- Adding task improvements:
  - ability to specify right ascension in h:m:s format and
    convert it to floating point value
  - ability to specify declination in deg:m:s format and convert
    it to floating point value
  - ability to specify initial task state: 0(waiting) or 1(new)
- telescope state updated

0.2.2 (2016-01-18)
- Slightly modified filter designations:
  CV Luminance
  TG Green
  TB Blue
  TR Red
  HA Halfa
  B fotometric B
  V fotometric V
  R fotometric R

0.2.1 (2016-01-17)
- Added aavso_id column in the Users view
- Added permissions column in the Users view
- Added tooltip on permissions column
- Added tooltip for task_id (in the task forum)
- Fixed names encoding (polish diacritic letters are now displayed
  correcty) in the users, tasks and objects list.
- Added ability to switch your own tasks to waiting mode
- Added ability to delete your own task (work in progress: